--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,10 @@ body {
     text-align: center;
 }
 
+.jumbotron a {
+    margin-bottom: 20px;
+}
+
 .jumbotron-smaller {
     height: auto;
 }
@@ -54,7 +58,7 @@ body {
     color: #999 !important;
 }
 
-#button-galeria {
+#button-gallery {
     width: calc(100% - 5px);
     padding: 1.2em 0 1.2em 0;
     background-color: #ffd500;
@@ -64,13 +68,29 @@ body {
     transition: transform 200ms, box-shadow 200ms;
 }
 
-#button-galeria:active {
+#button-gallery:active {
     background-color: #d0a000;
     box-shadow: #d0a000 0 0 0;
 }
 .hidden{
-    visibility: hidden;
+    display: none;
 }
+
+.visible{
+    display: block;
+}
+
+.item {
+    width: 100vw;
+    height: 50px;
+    padding-left: 5%;
+    border-bottom: 1px solid #000;
+    display: flex;
+    flex-direction: row;
+    box-sizing: border-box;
+}
+
+
 
 
 
